# deepinscan

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md  build.sh  验证报告_最终_架构修复完成.md  验证报告_阶段二_修复进展.md
.cursor/rules/: cpp_qt_dtk_standards.mdc  deepinscan_project.mdc  documentation_standards.mdc  error_handling.mdc  file_organization.md  performance_optimization.mdc  project_structure.md  scanner_domain_knowledge.mdc
.specstory/history/: 2025-07-16_04-00Z-扫描项目文档和源码.md  2025-07-16_16-09Z-进入研究模式并制定验证方案.md  2025-07-17_01-57Z-整理未完成的任务.md  2025-07-17_11-58Z-分析并修复build-sh编译问题.md  2025-07-18_11-15Z-进入审查模式并修复编译错误.md  2025-07-21_05-56Z-深入分析扫描界面未调用原因.md  2025-07-21_09-20Z-进入研究模式修复构建错误.md  2025-07-21_11-09Z-修复编译错误的研究模式.md  2025-07-22_01-03Z-研究项目实现与链接错误修复.md
.task/: Phase2_功能验证_完成报告.md  README.md  全自动修复计划执行报告.md  清理完成报告.md  项目专业化组织完成报告.md  验证报告_阶段一_编译问题.md  验证报告_阶段三_架构修复进展.md
data/: device_database.json
debian/: changelog  control  copyright  deepinscan.install  deepinscan.substvars  files  install  libdeepinscan-dev.install  libdeepinscan1.install  libdeepinscan1.substvars  rules
debian/.debhelper/libdeepinscan1/: dbgsym-build-ids  dbgsym-migration
debian/deepinscan-dbgsym/DEBIAN/: control  md5sums
debian/deepinscan/DEBIAN/: control  md5sums
debian/libdeepinscan-dev/DEBIAN/: control  md5sums
debian/libdeepinscan1/DEBIAN/: control  md5sums  shlibs
docs/: DEBIAN_PACKAGING_GUIDE.md  DTK_GUI_COMPLETION_REPORT.md  IMAGE_PROCESSING_PIPELINE_COMPLETION_REPORT.md  NETWORK_DISCOVERY_COMPLETION_REPORT.md  PERFORMANCE_OPTIMIZATION_COMPLETION_REPORT.md  PROGRESS_SUMMARY.md  PROJECT_COMPLETION_FINAL_REPORT.md
examples/: CMakeLists.txt  basic_usage.cpp  core_test.cpp  genesys_driver_example.cpp  image_processor_example.cpp  minimal_example.cpp  network_discovery_example.cpp  network_discovery_simple_example.cpp  sane_driver_example.cpp
include/Scanner/: DScannerDevice.h  DScannerDriver.h  DScannerException.h  DScannerGenesys.h  DScannerGlobal.h  DScannerImageProcessor.h  DScannerManager.h  DScannerNetworkDiscovery_Simple.h  DScannerSANE.h  DScannerTypes.h
misc/: deepinscan.pc.in
obj-x86_64-linux-gnu/: CPackConfig.cmake  CPackSourceConfig.cmake  install_manifest.txt
obj-x86_64-linux-gnu/examples/: deepinscan_core_test
obj-x86_64-linux-gnu/src/deepinscan_autogen/: mocs_compilation.cpp
obj-x86_64-linux-gnu/tests/: test_core_functionality  test_image_processing_advanced  test_image_processing_simple  test_performance_optimization  test_simd_optimization
obj-x86_64-linux-gnu/tests/test_core_functionality_autogen/include/: test_core_functionality.moc
obj-x86_64-linux-gnu/tests/test_image_processing_advanced_autogen/include/: test_image_processing_advanced.moc
obj-x86_64-linux-gnu/tests/test_image_processing_simple_autogen/include/: test_image_processing_simple.moc
obj-x86_64-linux-gnu/tests/test_performance_optimization_autogen/include/: test_performance_optimization.moc
obj-x86_64-linux-gnu/tests/test_simd_optimization_autogen/include/: test_simd_optimization.moc
resources/: resources.qrc
src/: CMakeLists.txt
src/communication/network/: CMakeLists.txt  dscannermdnsdiscovery.cpp  dscannernetworkdiscovery.cpp  dscannernetworkdiscovery_p.h  dscannernetworkdiscovery_simple.cpp  dscannernetworkdiscovery_simple_impl.cpp  dscannernetworkdiscovery_simple_stubs.cpp  dscannersoapdiscovery.cpp  network_complete_discovery.cpp  network_complete_discovery.h  network_discovery_stubs.cpp  network_discovery_tasks.cpp
src/communication/usb/: dscannerusb.cpp  dscannerusb_p.h
src/core/: CMakeLists.txt  dscannerdevice.cpp  dscannerdevice_p.h  dscannerexception.cpp  dscannerglobal.cpp  dscannermanager.cpp  dscannermanager_p.h
src/drivers/: CMakeLists.txt
src/drivers/genesys/: CMakeLists.txt  dscannergenesys.cpp  dscannergenesys_p.h
src/drivers/sane/: CMakeLists.txt  dscannersane.cpp  dscannersane_p.cpp  dscannersane_p.h  sane_api_complete.cpp  sane_api_complete.h  sane_option_manager.cpp  sane_option_manager.h  sane_preview_engine.h
src/drivers/vendors/: CMakeLists.txt
src/drivers/vendors/canon/: CMakeLists.txt  canon_driver_complete.cpp  canon_driver_complete.h
src/drivers/vendors/epson/: CMakeLists.txt  epson_driver_complete.cpp  epson_driver_complete.h
src/drivers/vendors/genesys/: CMakeLists.txt  genesys_driver_complete.cpp  genesys_driver_complete.h
src/gui/: CMakeLists.txt  application.cpp  application.h  main.cpp  mainwindow.cpp  mainwindow.h  minimal_main.cpp  simple_main.cpp
src/gui/dialogs/: aboutdialog.cpp  aboutdialog.h  advancedexportdialog.cpp  advancedexportdialog.h  settingsdialog.cpp  settingsdialog.h
src/gui/widgets/: batchprocesswidget.cpp  batchprocesswidget.h  devicelistwidget.cpp  devicelistwidget.h  imagepreviewwidget.cpp  imagepreviewwidget.h  imageprocessingwidget.cpp  imageprocessingwidget.h  scancontrolwidget.cpp  scancontrolwidget.h
src/processing/: CMakeLists.txt  advanced_image_processor.cpp  advanced_image_processor.h  dscannerimageprocessor.cpp  dscannerimageprocessor_complete.cpp  dscannerimageprocessor_enhanced.cpp  dscannerimageprocessor_p.cpp  dscannerimageprocessor_p.h  dscannerimageprocessor_simple.cpp  imageformat_handler.cpp  imageprocessing_algorithms.cpp  memory_optimized_processor.cpp  memory_optimized_processor.h  multithreaded_processor.cpp  multithreaded_processor.h  performance_optimizer.cpp  performance_optimizer.h  scandata_processor.cpp  simd_image_algorithms.cpp  simd_image_algorithms.h  simple_simd_support.cpp  simple_simd_support.h
tests/: CMakeLists.txt  CMakeLists_standalone.txt  test_advanced_algorithms.cpp  test_comprehensive_suite.cpp  test_core_functionality.cpp  test_device_discovery.cpp  test_dscannerdevice.cpp  test_dscannerexception.cpp  test_dscannertypes.cpp  test_error_handling.cpp  test_image_processing.cpp  test_image_processing_advanced.cpp  test_image_processing_simple.cpp  test_integration.cpp  test_memory_optimization.cpp  test_performance_optimization.cpp  test_performance_standalone.cpp  test_scan_workflow.cpp  test_simd_optimization.cpp  test_simd_performance.cpp
(+12 files in other folders)
